[package]
name = "lottery"
version = "0.1.0"
authors = ["Victor <ts0963187279@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde_json = "1.0.53"
serde = "1.0.111"
rand = "0.7.3"
actix-web = {version = "2.0.0", features=["openssl"]}
actix-cors = "0.2.0"
actix-rt = "1.0.0"
failure = "0.1"
hyper = "0.13.7"
futures-macro = "0.3.5"
futures = "0.3.5"
futures-util = "0.3.5"
failure_derive = "0.1"
http = "0.1.8"
hyper-tls = "0.4.3"
hyper-native-tls = "0.3.0"
openssl = "0.10.33"